# stm32-firmware

./: Cargo.toml  build.rs  memory.x  openocd.cfg
.cargo/: config.toml
src/: main.rs
src/lsm6dsoxtr/: mod.rs
