[package]
name = "stm-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.6.5"
defmt = "0.3.10"
defmt-rtt = "0.4.0"
defmt-macros = "0.3"
embedded-hal = "1.0.0"
hal = { package = "stm32-hal2", version = "^0.2.11", features = ["wb55", "wbrt"] }